--- a/java/shrine/app/src/main/res/layout/shr_login_fragment.xml
+++ b/java/shrine/app/src/main/res/layout/shr_login_fragment.xml
@@ -22,7 +22,8 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="48dp"
             android:layout_marginBottom="16dp"
-            app:srcCompat="@drawable/shr_logo" />
+            app:srcCompat="@drawable/shr_logo"
+            android:tint="?android:attr/textColorPrimary"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -34,6 +35,7 @@
             android:textSize="16sp" />
 
         <android.support.design.widget.TextInputLayout
+            style="@style/Widget.Shrine.TextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/shr_hint_username">
@@ -46,6 +48,7 @@
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
+            style="@style/Widget.Shrine.TextInputLayout"
             android:id="@+id/password_text_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -65,6 +68,7 @@
             android:layout_height="wrap_content">
 
             <android.support.design.button.MaterialButton
+                style="@style/Widget.Shrine.Button"
                 android:id="@+id/next_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -74,7 +78,7 @@
 
             <android.support.design.button.MaterialButton
                 android:id="@+id/cancel_button"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
+                style="@style/Widget.Shrine.Button.TextButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="12dp"
