--- a/java/shrine/app/src/main/res/values/colors.xml
+++ b/java/shrine/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#FEDBD0</color>
     <color name="textColorPrimary">#442C2E</color>
     <color name="toolbarIconColor">#FFCF44</color>
-    <color name="loginPageBackgroundColor">#414149</color>
-    <color name="productGridBackgroundColor">#414149</color>
+    <color name="loginPageBackgroundColor">#ffffff</color>
+    <color name="productGridBackgroundColor">#ffffff</color>
     <color name="colorControlActivated">#FBB8AC</color>
 </resources>
