--- a/java/shrine/app/src/main/res/values/colors.xml
+++ b/java/shrine/app/src/main/res/values/colors.xml
@@ -6,6 +6,6 @@
     <color name="textColorPrimary">#442C2E</color>
     <color name="toolbarIconColor">#FFCF44</color>
     <color name="loginPageBackgroundColor">#ffffff</color>
-    <color name="productGridBackgroundColor">#ffffff</color>
+    <color name="productGridBackgroundColor">#FFFBFA</color>
     <color name="colorControlActivated">#FBB8AC</color>
 </resources>
