--- a/java/shrine/app/src/main/res/values/styles.xml
+++ b/java/shrine/app/src/main/res/values/styles.xml
@@ -51,4 +51,8 @@
     <style name="TextAppearance.Shrine.Toolbar" parent="TextAppearance.MaterialComponents.Button">
         <item name="android:textSize">16sp</item>
     </style>
+
+    <style name="Widget.Shrine.Backdrop" parent="">
+        <item name="android:background">?attr/colorAccent</item>
+    </style>
 </resources>
