--- a/java/shrine/app/src/main/res/values/colors.xml
+++ b/java/shrine/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#FBB8AC</color>
     <color name="colorAccent">#FEDBD0</color>
     <color name="textColorPrimary">#442C2E</color>
-    <color name="toolbarIconColor">#FFCF44</color>
+    <color name="toolbarIconColor">#442C2E</color>
     <color name="loginPageBackgroundColor">#ffffff</color>
     <color name="productGridBackgroundColor">#FFFBFA</color>
     <color name="colorControlActivated">#FBB8AC</color>
